meecast (0.4.8) unstable; urgency=low

  * Added stations in yr.no database (Mexico, Netherland)

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 15 Jan 2011 22:42:23 +0200

meecast (0.4.7) unstable; urgency=low

  * Fixed problem with new stations in sources yr.no and gismeteo.ru 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 16 Jan 2011 18:42:23 +0200

meecast (0.4.6) unstable; urgency=low

  * Added autoupdating function
  * Updated Swedish, Finish and Russian translations
  * Added trimming of whitespace in Search Field 
  * Search Field has been made case-insensitive 
  * Added hours forecast for source weather.com

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 11 Jan 2011 22:42:23 +0200

meecast (0.4.5) unstable; urgency=low

  * Changed date format in main window
  * Added pressure units settings 
  * Added Swedish translation. Thanks Angela Nennebrandt and Tomislav
    Veleckovik 
  * Fixed Bug #12480 - Title in info screen should be translatable 
  * Changed algorithm for day/night time
  * Updated Polish, Spain and Germany translations

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 12 Dec 2011 23:42:23 +0200

meecast (0.4.4) unstable; urgency=low

  * Added possibility to install events applet using MeeCast
  * Fixed problem with autoupdating in events applet
  * Fixed segmentation fault with nill GPS station 
  * Fixed wrong wind speed values in yr.no and gismeteo.ru
  * Small improvements in external view
  * Added stations in yr.no database (China)
  * Updated Russian and Finish translations 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 28 Nov 2011 12:42:23 +0200

meecast (0.4.3) unstable; urgency=low

  * Added current weather for gismeteo.ru source 
  * Added sunrise and sunset for current day in gismereo.ru source
  * Added feels like for gismeteo.ru
  * Fixed bug with automatic update of the GPS location 
  * Fixed displaying of station name for non-Latin symbol in event applet 
  * Limited time for autoupdating (about 1 hour)
