@@ -1,8 +1,10 @@
 meecast (0.4.8) unstable; urgency=low
 
   * Added stations in yr.no database (Mexico, Netherland)
+  * Added LockScreen widget
+  * Decreased size of image files. Thanks Wolfgang Fürst
 
- -- Vlad Vasiliev <vlad@gas.by>  Wed, 15 Jan 2011 22:42:23 +0200
+ -- Vlad Vasiliev <vlad@gas.by>  Fri, 10 Feb 2011 16:42:23 +0200
 
 meecast (0.4.7) unstable; urgency=low
 
